Working Database and Site Connected

--- a/MVC_Customer/appsettings.json
+++ b/MVC_Customer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-IO60R5T\\SQLEXPRESS;Server=MVCCustomer;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-IO60R5T\\SQLEXPRESS;Database=MVCCustomer;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
